updated build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon server.js & next dev ",
-    "build": "next build & nodemon server.js",
+    "build": "next build & node server.js",
     "start": "next start",
     "lint": "next lint"
   },
